// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cosmos fixtures: Action:default 1`] = `
<div
  className="wrapper"
>
  <button
    className="fold"
  >
    Fold
  </button>
  <button
    className="call"
  >
    Call
  </button>
  <button
    className="raise"
  >
    Raise
  </button>
</div>
`;

exports[`Cosmos fixtures: Community:default 1`] = `
<div
  className="wrapper"
>
  <div
    className="round"
  >
    Preflop
  </div>
  <div
    className="board"
  >
    __ __ __ __ __
  </div>
  <div
    className="pot"
  >
    Pot: 
    0
  </div>
</div>
`;

exports[`Cosmos fixtures: Community:flop 1`] = `
<div
  className="wrapper"
>
  <div
    className="round"
  >
    Flop
  </div>
  <div
    className="board"
  >
    As 5h 8d __ __
  </div>
  <div
    className="pot"
  >
    Pot: 
    2
  </div>
</div>
`;

exports[`Cosmos fixtures: Community:preflop 1`] = `
<div
  className="wrapper"
>
  <div
    className="round"
  >
    Preflop
  </div>
  <div
    className="board"
  >
    __ __ __ __ __
  </div>
  <div
    className="pot"
  >
    Pot: 
    2
  </div>
</div>
`;

exports[`Cosmos fixtures: Community:river 1`] = `
<div
  className="wrapper"
>
  <div
    className="round"
  >
    River
  </div>
  <div
    className="board"
  >
    As 5h 8d Jc 4s
  </div>
  <div
    className="pot"
  >
    Pot: 
    2
  </div>
</div>
`;

exports[`Cosmos fixtures: Community:turn 1`] = `
<div
  className="wrapper"
>
  <div
    className="round"
  >
    Turn
  </div>
  <div
    className="board"
  >
    As 5h 8d Jc __
  </div>
  <div
    className="pot"
  >
    Pot: 
    2
  </div>
</div>
`;

exports[`Cosmos fixtures: Player:active 1`] = `
<div
  className="active"
>
  <center
    className="name"
  >
    Hero
  </center>
  <ul>
    <li>
      Stk: 
      199
    </li>
    <li>
      Bet: 
      1
    </li>
  </ul>
</div>
`;

exports[`Cosmos fixtures: Player:default 1`] = `
<div
  className="inactive"
>
  <center
    className="name"
  >
    Player
  </center>
  <ul>
    <li>
      Stk: 
      100
    </li>
    <li>
      Bet: 
      0
    </li>
  </ul>
</div>
`;

exports[`Cosmos fixtures: Player:folded 1`] = `
<div
  className="folded"
>
  <center
    className="name"
  >
    Hero
  </center>
  <ul>
    <li>
      Stk: 
      199
    </li>
    <li>
      Bet: 
      1
    </li>
  </ul>
</div>
`;

exports[`Cosmos fixtures: Player:inactive 1`] = `
<div
  className="inactive"
>
  <center
    className="name"
  >
    Hero
  </center>
  <ul>
    <li>
      Stk: 
      199
    </li>
    <li>
      Bet: 
      1
    </li>
  </ul>
</div>
`;

exports[`Cosmos fixtures: Table:3-players 1`] = `
<div
  className="wrapper"
>
  <div
    className="community"
  >
    <div
      className="wrapper"
    >
      <div
        className="round"
      >
        Flop
      </div>
      <div
        className="board"
      >
        As 2s Kh __ __
      </div>
      <div
        className="pot"
      >
        Pot: 
        1.5
      </div>
    </div>
  </div>
  <div
    className="pl0"
  >
    <div
      className="active"
    >
      <center
        className="name"
      >
        Button
      </center>
      <ul>
        <li>
          Stk: 
          100
        </li>
        <li>
          Bet: 
          0
        </li>
      </ul>
    </div>
  </div>
  <div
    className="pl1"
  >
    <div
      className="inactive"
    >
      <center
        className="name"
      >
        Small
      </center>
      <ul>
        <li>
          Stk: 
          99.5
        </li>
        <li>
          Bet: 
          0.5
        </li>
      </ul>
    </div>
  </div>
  <div
    className="pl2"
  >
    <div
      className="inactive"
    >
      <center
        className="name"
      >
        Big
      </center>
      <ul>
        <li>
          Stk: 
          99
        </li>
        <li>
          Bet: 
          1
        </li>
      </ul>
    </div>
  </div>
</div>
`;
